Add ListPrisms for cons/snoc list decomposition
Implements cons/snoc optics for functional list pattern matching:

Core Features:
- ListPrisms: cons, snoc, empty, head, last, tail, init prisms/affines
- Stack-safe trampoline utilities: map, filter, fold, reverse, zip, etc.
- Null-safe list copying (handles null elements)

Focus DSL Integration:
- FocusPath/AffinePath/TraversalPath: cons, snoc, head, last, tail, init
- FocusPaths: listCons, listSnoc, listEmpty, listHead, listLast, etc.

Documentation:
- Tutorial15 with 19 exercises on list decomposition
- list_decomposition.md reference documentation
- Advanced type class integration investigation

Tests:
- Comprehensive ListPrismsTest coverage
- Focus path integration tests